--- a/rocketProject/src/component/login/LoginForm.css
+++ b/rocketProject/src/component/login/LoginForm.css
@@ -10,7 +10,7 @@ body{
     background-color:#fff;
     padding: 100px;
     padding-top: 50px;
-    height: 680px;
+    height: 700px;
     border-radius: 10px;
   }
   
@@ -126,4 +126,20 @@ body{
   .actions2 {
     display: flex;
     justify-content: space-between;
+  }
+
+  .login-gg {
+    padding: 5px 14%;
+    margin-bottom: 15px;
+    color: red;
+    background-color:azure;
+    cursor: pointer;
+  }
+
+  .login-gg:hover {
+    background-color: aqua;
+  }
+
+  .error-message {
+    color: red;
   }
