--- a/rocketProject/src/component/FooterItem.css
+++ b/rocketProject/src/component/FooterItem.css
@@ -22,7 +22,7 @@
     width: 80%;
     height: 8px;
     border-radius: 1rem;
-    background-color: white;
+    background-color:#f1eeee;
 }
 
 .skill {
