--- a/rocketProject/src/table/Table.css
+++ b/rocketProject/src/table/Table.css
@@ -16,3 +16,126 @@ button[type="submit"], button[type="button"] {
     margin-left: auto;
     margin-right: auto;
 }
+
+select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 1px;
+    text-overflow: '';
+    border: 1px solid #ccc;
+    padding: 5px;
+  }
+
+  /* Tùy chỉnh giao diện của select */
+  select.custom-select {
+    background-color: #f2f2f2;
+    color: #333;
+    font-size: 16px;
+    border-radius: 5px;
+  }
+
+  /* Tùy chỉnh giao diện khi select được hover */
+  select.custom-select:hover {
+    background-color: #e0e0e0;
+  }
+
+  #input-search {
+    width: 300px;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 10px;
+  }
+
+  #btn-search {
+    margin-left: 5px;
+    padding: 11px;
+    width: 100px;
+    font-size: 18px;
+    font-weight: 400;
+    background-color: #fff;
+    color: #333;
+  }
+
+  #btn-search:hover{
+    background-color: #333;
+    color: #fff;
+  }
+
+  .box-header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .sort-by {
+    font-size: 18px;
+    font-weight: 400;
+    margin-right: 8px;
+  }
+
+  .custom-select {
+    position: relative;
+    display: inline-block;
+    font-size: 16px;
+    background-color: #fff;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    padding: 10px 30px 10px 10px;
+    width: 120px; /* Điều chỉnh kích thước ô select */
+    cursor: pointer;
+    margin-right: 15px;
+  }
+
+  .custom-select select {
+    display: none;
+  }
+
+  .custom-select::before {
+    content: "\25BC"; /* Mũi tên Unicode */
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    pointer-events: none;
+  }
+
+  /* Tùy chỉnh màu sắc và kiểu hoạt động */
+  .custom-select:hover {
+    border-color: #009688; /* Màu khi hover */
+  }
+
+  .custom-select select:hover {
+    cursor: pointer;
+  }
+
+  .reset {
+    margin-right: 15px;
+    padding: 8px 20px;
+    background-color: #fff;
+    color: black;
+  }
+
+  .reset:hover {
+    background-color: black;
+    color: #fff;
+  }
+
+  .new-group {
+    padding: 10px;
+    margin-left: 10px;
+    border-radius: 10px;
+    background-color: #fff;
+    font-weight: 500;
+    color: black;
+    cursor: pointer;
+    box-shadow:2px 2px 4px rgba(0, 0, 0, 0.2)
+  }
+
+  .new-group:hover{
+    background-color: #333;
+    color: #fff;
+  }
+  .sort {
+    display: flex;
+    align-items: center;
+  }
